css alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -272,11 +272,7 @@
   filter: blur(0);
 }
 
-
-
-
 @media (max-width:800px){
-
   .main-head h2{
     font-size: 36px;
     width: 70vw;
@@ -287,11 +283,9 @@
   }
 }
 
-
 .button-grp a{
   pointer-events: auto;
 }
-
 
 .me{
   width:300px;
@@ -341,7 +335,9 @@
 
 .scroll-hint {
   position: absolute;
-  bottom: 16px;
+
+/* previously 16 */
+  bottom: 24px; 
   width: 100%;
   text-align: center;
   font-size: 16px;
